se agrego en pruebas la manera de hacer que el mapa se vea mejor

--- a/Residencia/index.html
+++ b/Residencia/index.html
@@ -99,7 +99,10 @@
     </aside>
 
     <main>
-      <div id="map"></div>
+      <div class="map-card">
+        <div id="map"></div>
+      </div>
+
 
       <!-- Toggle + Panel flotante -->
       <div id="tableMenuWrap">
