se esta trabajando con el back pero se detendra un poco por fallas

--- a/Residencia/index.html
+++ b/Residencia/index.html
@@ -201,6 +201,6 @@
   </div>
 
   <script src="script.js" defer></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly" defer></script>
-</body>
+<!--   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly" defer></script>
+ --></body>
 </html>
