--- a/kikirutas-web/index.html
+++ b/kikirutas-web/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly" async defer></script>
   </body>
 </html>
