ya funciona en su totalidad los paneles de usuaria, admin y en proceso del operador

--- a/kikirutas-web/index.html
+++ b/kikirutas-web/index.html
@@ -30,10 +30,10 @@
     <div id="app"></div>
 
     <script type="module" src="/src/main.ts"></script>
-    <!-- <script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly"
       async
       defer
-    ></script> -->
+    ></script>
   </body>
 </html>
