se comento la api para menos consumo

--- a/kikirutas-web/index.html
+++ b/kikirutas-web/index.html
@@ -43,11 +43,11 @@
     </script>
 
     <!-- Script de Google Maps: conserva tu propia API key -->
-    <script
+<!--     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly"
       async
       defer
-    ></script>
+    ></script> -->
   </body>
 </html>
 
