--- a/kikirutas-web/index.html
+++ b/kikirutas-web/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/img/Blanco.png" />
-
     <!-- Tipografías -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,36 +17,33 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
     <!-- Viewport con safe-areas para iPhone (notch) -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <!-- Opcionales pero recomendados en móvil -->
     <meta name="theme-color" content="#0B0B0B" />
     <meta name="color-scheme" content="dark light" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <title>kikirutas-web</title>
   </head>
-    <body>
+  <body>
     <div id="app"></div>
-
     <!-- Tu app de Vue -->
     <script type="module" src="/src/main.ts"></script>
-
     <!-- Callback global que Google Maps intenta ejecutar -->
     <script>
-      // Esta función se usa solo como callback del script de Google Maps.
-      // No es necesario que haga nada especial porque dentro de Vue
-      // esperamos a que window.google exista (waitForGoogle()).
       window.initApp = function initApp() {
-        console.log('Google Maps JavaScript API cargada correctamente');
+        console.log("Google Maps JavaScript API cargada correctamente");
       };
     </script>
-
-    <!-- Script de Google Maps: conserva tu propia API key -->
+    
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly"
       async
@@ -50,8 +51,3 @@
     ></script>
   </body>
 </html>
-
-</html>
-
-
-<!-- AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o -->
