--- a/kikirutas-web/index.html
+++ b/kikirutas-web/index.html
@@ -23,8 +23,8 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <!-- Opcionales pero recomendados en móvil -->
-    <meta name="theme-color" content="#0B0B0B" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="color-scheme" content="light" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
@@ -43,7 +43,7 @@
         console.log("Google Maps JavaScript API cargada correctamente");
       };
     </script>
-    
+
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYXB_gIntmbGQczrRY37FrHmlsUXd2l-o&libraries=places,geometry&callback=initApp&v=weekly"
       async
